--- a/frontend/src/app/twofa-page/twofa-page.component.css
+++ b/frontend/src/app/twofa-page/twofa-page.component.css
@@ -12,12 +12,13 @@ body {
 }
 
 .custom-card {
-  max-width: 20rem;
   padding: 0;
   border: 1px solid #343a40;
   display: flex;
   flex-direction: column;
   justify-content: center;
+  height:100%;
+  width:100%;
 }
 
 .custom-card .card-header {
