--- a/frontend/src/app/twofa-page/twofa-page.component.html
+++ b/frontend/src/app/twofa-page/twofa-page.component.html
@@ -1,6 +1,6 @@
 
 <section id="flogin">
-  <div class="card text-bg-dark mb-3 custom-card">
+  <div class="card text-bg-dark custom-card">
 
     <div class="card-header d-flex justify-content-between align-items-center">
       <h5 class="mb-0">{{'2fa'|transloco}}</h5>
@@ -12,7 +12,7 @@
       <button type="button" class="btn btn-light mb-2" (click)="provjeriKod()">{{'unlock'|transloco}}</button>
 
       <div *ngIf="uspjesnaVerifikacija" class="alert alert-success mt-2" role="alert">
-        {{'verificationSuccessful!'|transloco}}
+        {{'verificationSuccessful'|transloco}}
       </div>
 
       <div *ngIf="neuspjesnaVerifikacija" class="alert alert-danger mt-2" role="alert">
