--- a/frontend/src/app/user-profile/user-profile.component.css
+++ b/frontend/src/app/user-profile/user-profile.component.css
@@ -130,7 +130,7 @@ mat-icon {
   justify-content: space-between;
   background-color: #d4edda;
   border: 1px solid #c3e6cb;
-  border-radius: 5px; /* Rounded corners */
+  border-radius: 5px;
   padding: 10px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   z-index: 1050;
