--- a/frontend/src/app/property/property.component.html
+++ b/frontend/src/app/property/property.component.html
@@ -37,72 +37,38 @@
  </div>
 </div>
 <div class="cont">-->
-  <!-- Carousel wrapper -->
-  <div
-    id="carouselBasicExample"
-    data-mdb-carousel-init class="carousel slide carousel-fade"
-    data-mdb-ride="carousel"
-  >
-    <!-- Indicators -->
-    <div class="carousel-indicators">
-      <button
-        type="button"
-        data-mdb-target="#carouselBasicExample"
-        data-mdb-slide-to="0"
-        class="active"
-        aria-current="true"
-        aria-label="Slide 1"
-      ></button>
-      <button
-        type="button"
-        data-mdb-target="#carouselBasicExample"
-        data-mdb-slide-to="1"
-        aria-label="Slide 2"
-      ></button>
-      <button
-        type="button"
-        data-mdb-target="#carouselBasicExample"
-        data-mdb-slide-to="2"
-        aria-label="Slide 3"
-      ></button>
-    </div>
-
-    <!-- Inner -->
+  <!-- U `property.component.html` -->
+  <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="false">
+    <ol class="carousel-indicators">
+      <li *ngFor="let image of property.images; let i = index"
+          [attr.data-bs-target]="'#carouselExampleIndicators'"
+          [attr.data-bs-slide-to]="i"
+          [class.active]="i === 0"
+          [attr.aria-label]="'Slide ' + (i + 1)">
+      </li>
+    </ol>
     <div class="carousel-inner">
       <div *ngFor="let image of property.images; let i = index"
            class="carousel-item"
            [class.active]="i === 0">
         <img [src]="image.path"
              class="d-block w-100"
-             alt="Property Image"/>
-
+             alt="Slide image"/>
       </div>
     </div>
-    <!-- Inner -->
-
-    <!-- Controls -->
-    <button
-      class="carousel-control-prev"
-      type="button"
-      data-mdb-target="#carouselBasicExample"
-      data-mdb-slide="prev"
-    >
+    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-bs-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
       <span class="visually-hidden">Previous</span>
-    </button>
-    <button
-      class="carousel-control-next"
-      type="button"
-      data-mdb-target="#carouselBasicExample"
-      data-mdb-slide="next"
-    >
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-bs-slide="next">
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
       <span class="visually-hidden">Next</span>
-    </button>
+    </a>
   </div>
-  <!-- Carousel wrapper -->
 
-  <!-- Property Details -->
+
+
+
   <div *ngIf="property" class="property-details">
     <div class="row">
       <div class="col-md-6 mb-3">
